test/should_fail/literal_patterns_5.erl
-module(literal_patterns_5).

-export([f/1]).

-spec f(atom) -> ok.
f("foo") -> ok.
